--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,4 +1,6 @@
-<ion-tabs class="icon-icon-tab tabs-position">
-	<ion-tab title="Sports" icon="ion-ios-people" href='#/tab/list'>
-		<ion-nav-view name="list-tab"></ion-nav-view>
+<ion-tabs class="tabs-positive tabs-icon-top">
+	<ion-tab title="Sports" icon="ion-android-bicycle" href='#/tab/list'>
+		<ion-nav-view name="list-tab">
+
+    </ion-nav-view>
 </ion-tabs>
